# telegram-tui

./: Cargo.toml  LICENSE
src/: app.rs  config.rs  input.rs  main.rs  telegram.rs  ui.rs
