[package]
name = "telegram-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
grammers-client = "0.9"
grammers-session = { version = "0.9", features = ["sqlite-storage"] }
grammers-mtsender = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
futures = "0.3"
dirs = "6"
